# gomez

./: .commitlintrc.json  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml
.github/workflows/: ci.yml  main.yml  publish.yml  test.yml
benches/: solvers.rs
crates/gomez/: Cargo.toml
crates/gomez-bench/: Cargo.toml
crates/gomez/examples/: custom_algorithm.rs  equations.rs  optimization.rs
crates/gomez/src/: algo.rs  driver.rs  testing.rs
crates/gomez/src/algo/: lipo.rs  nelder_mead.rs  trust_region.rs
crates/gomez/src/core/: domain.rs  function.rs  optimizer.rs
examples/: rosenbrock.rs
gomez-bench/: Cargo.toml
gomez-bench/benches/: main.rs
gsl-wrapper/: Cargo.toml
gsl-wrapper/gsl-sys/: Cargo.toml  build.rs  wrapper.h
gsl-wrapper/gsl-sys/src/: lib.rs
gsl-wrapper/src/: function.rs  lib.rs  multiroot.rs  status.rs  vec.rs
src/: algo.rs  analysis.rs  core.rs  derivatives.rs  driver.rs  lib.rs  population.rs  solver.rs  testing.rs
src/algo/: lipo.rs  nelder_mead.rs  steffensen.rs  trust_region.rs
src/analysis/: initial.rs
src/core/: base.rs  domain.rs  function.rs  optimizer.rs  solver.rs  system.rs
src/solver/: cuckoo.rs  lipo.rs  nelder_mead.rs  steffensen.rs  trust_region.rs
