[package]
name = "gomez"
version = "0.4.1"
authors = ["Petr Nevyhoštěný <petr.nevyhosteny@gmail.com>"]
description = "A pure Rust framework and implementation of (derivative-free) methods for solving nonlinear (bound-constrained) systems of equations."
documentation = "https://docs.rs/gomez/"
repository = "https://github.com/datamole-ai/gomez"
license = "MIT"
readme = "README.md"
keywords = ["nonlinear-equations", "optimization", "math", "science"]
categories = ["science", "mathematics"]
edition = "2021"

[features]
testing = []

[dependencies]
nalgebra = "0.31"
rand = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4"
approx = "0.5"
num-traits = "0.2"
thiserror = "1"
log = "0.4"
getset = "0.1"
