[package]
name = "gomez"
version = "0.4.1"
authors = ["Petr Nevyhoštěný <petr.nevyhosteny@gmail.com>"]
description = "Framework and implementation for mathematical optimization and solving non-linear systems of equations."
documentation = "https://docs.rs/gomez/"
repository = "https://github.com/datamole-ai/gomez"
license = "MIT"
readme = "README.md"
keywords = ["nonlinear-equations", "optimization", "math", "science"]
categories = ["science", "mathematics"]
edition = "2021"

[features]
testing = []

[dependencies]
nalgebra = "0.32.0"
approx = "0.5.0"
num-traits = "0.2.0"
thiserror = "1.0.0"
log = "0.4.0"
getset = "0.1.0"
fastrand = "2.0.0"
fastrand-contrib = "0.1.0"
