[package]
name = "gsl-wrapper"
version = "0.1.0"
authors = ["Petr Nevyhoštěný <petr.nevyhosteny@gmail.com>"]
description = "Rust wrapper for a subset of the GNU scientific library used solely for benchmarking gomez"
license = "GPL-3.0+"
edition = "2021"

[dependencies]
gsl-sys = { path = "gsl-sys" }
